<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".DealActivity" >

    <EditText
        android:id="@+id/txtTitle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/text_margin_standard"
        android:layout_marginLeft="8dp"
        android:layout_marginTop="@dimen/text_margin_large"
        android:layout_marginEnd="@dimen/text_margin_standard"
        android:layout_marginRight="8dp"

        android:hint="@string/title_hint"
        android:inputType="textPersonName"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/txtPrice"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/text_margin_standard"
        android:layout_marginLeft="8dp"
        android:layout_marginTop="@dimen/text_margin_standard"
        android:layout_marginEnd="@dimen/text_margin_standard"
        android:layout_marginRight="8dp"
        android:hint="@string/price_hint"
        android:inputType="numberDecimal"
        app:layout_constraintEnd_toEndOf="@+id/txtTitle"
        app:layout_constraintStart_toStartOf="@+id/txtTitle"
        app:layout_constraintTop_toBottomOf="@+id/txtTitle" />

    <EditText
        android:id="@+id/txtDescription"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/text_margin_standard"
        android:layout_marginLeft="8dp"
        android:layout_marginTop="@dimen/text_margin_standard"
        android:layout_marginEnd="@dimen/text_margin_standard"
        android:layout_marginRight="8dp"
        android:hint="@string/description_hint"
        android:inputType="textPersonName"
        app:layout_constraintEnd_toEndOf="@+id/txtTitle"
        app:layout_constraintStart_toStartOf="@+id/txtTitle"
        app:layout_constraintTop_toBottomOf="@+id/txtPrice" />

    <Button
        android:id="@+id/btnImage"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/text_margin_standard"
        android:layout_marginTop="@dimen/text_margin_standard"
        android:layout_marginEnd="@dimen/text_margin_standard"
        android:text="@string/upload_image"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txtDescription" />

    <ImageView
        android:id="@+id/imgDealPic"
        android:layout_width="match_parent"
        android:layout_height="300dp"
        android:layout_marginStart="@dimen/text_margin_standard"
        android:layout_marginLeft="@dimen/text_margin_standard"
        android:layout_marginTop="@dimen/text_margin_standard"
        android:layout_marginEnd="16dp"
        android:layout_marginRight="16dp"
        android:contentDescription="@string/image_content_desc"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btnImage"
        app:srcCompat="@android:color/black"
        />
    <!--app:srcCompat="@android:color/transparent" -->


</androidx.constraintlayout.widget.ConstraintLayout>